Fix last row image alignment
Justify-between don't suit well with the pictures gallery as it looks
like there is missing pictures.

--- a/client/app/view-grid/_view-grid.theme.scss
+++ b/client/app/view-grid/_view-grid.theme.scss
@@ -8,6 +8,11 @@
 
     natural-gallery {
         .natural-gallery-js {
+            .natural-gallery-body {
+                justify-content: flex-start !important;
+                gap: 5px;
+            }
+
             .button {
                 border-top: 1px solid #4c4747 !important;
                 background-color: rgba(0, 0, 0, 0.5) !important;
